# byte-seed

./: .gitignore  LICENSE  README.md  chat.py  pyproject.toml  pytest.ini  requirements-data.txt  requirements.txt
configs/: byteseed_12m.yaml  byteseed_20m.yaml  byteseed_5m.yaml
data/: README_DATA.md
docs/: ARCHITECTURE.md  DATASET_GUIDE.md  DATA_QUALITY.md  DEMO_TRANSCRIPT.md  EVALUATION.md  GENERALIZATION_SFT_V1.md  HOW_TO_RUN.md  LIMITATIONS.md  PUBLIC_RELEASE_CHECKLIST.md  REPO_HYGIENE.md  TESTING.md  TRAINING_NOTES.md  V0_4_FOUNDATION_AUDIT.md
examples/: byteseed_anchor_sft.jsonl  byteseed_anchor_v2_1_sft.jsonl  byteseed_anchor_v2_2_sft.jsonl  byteseed_anchor_v2_3_sft.jsonl  byteseed_anchor_v2_sft.jsonl  byteseed_curated_sft.jsonl  byteseed_personal_assistant_sft.jsonl  chat_examples.jsonl  json_output_examples.jsonl
scripts/: benchmark_generation.py  build_anchor_sft.py  build_anchor_v2_1_sft.py  build_anchor_v2_2_sft.py  build_anchor_v2_3_sft.py  build_anchor_v2_sft.py  build_curated_sft.py  build_generalization_sft.py  build_personal_dataset.py  count_params.py  eval_anchor_v2.py  eval_anchor_v2_1.py  eval_anchor_v2_2.py  eval_anchor_v2_3.py  eval_chat_checkpoint.py  eval_stable_v0_2.py  generate_local_assistant_data.py  import_public_assistant_data.py  inspect_dataset.py  inspect_sft_file.py  run_anchor_v2_1_sft.py  run_anchor_v2_2_sft.py  run_anchor_v2_3_sft.py  run_anchor_v2_sft.py  run_staged_sft.py  sft_smoke_test.py  smoke_test.py
tests/: conftest.py  test_attention_backends.py  test_benchmark_reports.py  test_causal_attention.py  test_config.py  (+28 more)
(+52 files in other folders)
