[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "byteseed"
version = "0.1.0"
description = "A tiny GPT-style language model grown from markdown notes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ByteSeed contributors" }]
keywords = [
  "pytorch",
  "transformer",
  "gpt",
  "llm",
  "language-model",
  "from-scratch",
  "machine-learning",
  "deep-learning",
  "cuda",
  "sentencepiece",
]
dependencies = ["torch", "sentencepiece", "pyyaml", "tqdm", "numpy"]

[project.scripts]
byteseed-chat = "byteseed.chat:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


